views/css/base.css
* {
    margin: 0;
    padding: 0;
}

.main {
    display:flex;
    font-family: "Raleway";
    font-style: normal;
    flex-direction: column;
    max-width: 100%;
    overflow-x: hidden;
}

.header {
    display: flex;
    align-items: center;
    height: 5vh;
    width: 100vw;
    background-color: #183F76;
    color: white;
    font-weight: 200;
    font-size: 12px;
    padding-left: 2vw;
}

.lower {
    display: flex;
}

.menu {
    height: 95vh;
    width: 15vw;
    background-color: #f5f5f5;
    border-right: 1px solid rgb(240, 240, 240);
    display:flex;
}

.icons {
    height: 100%;
    width: 30%;
    text-align: right;
    padding-right: 15px;
}

.menu-col {
    height: 100%;
    width: 55%;
    display: flex;
    flex-direction: column;
}

.menu-items {
    list-style-type: none;
    font-weight: 700;
    font-size: 20px;
}

.menu-items li {
    margin-top: 50px;
}

.menu-icons li {
    margin-top: 50px;
}

.menu-items a{
    text-decoration: none;
    color: black;
}

.menu-items li:after {
    display: block;
    content: '';
    transform: scaleX(0);  
    transition: transform 250ms ease-in-out; 
    transform-origin: 100% 50%;
    margin-left: -40px;
    margin-top: 6px; 
}

.menu-items li:after{
    border-bottom: solid 3px #469ed4;
}

.menu-items li:hover:after {
    transform: scaleX(1);
    transform-origin: 0% 50%;
    margin-left: -60px;
}

li:hover {
    cursor: pointer;
}

.selected {
    border-bottom: solid 3px #469ed4;
    margin-top: -3px;
    margin-left: -60px;
    display:block;
    z-index: 1 !important;
}

.icon-2 {
    margin-top: 2px;
}
.icon-3 {
    margin-top: 3px;
} 

.icon-4 {
    margin-top: 5px;
}

.icon-5 {
    margin-top: 9px;
}

.page {
    height: 95vh;
    width: 85vw;
}


.logout-button {
    position: absolute;
    width: 10%;
    height: 4%;
    border-radius: 50px;
    outline: none;
    border: none;
    background-color: #f37f7f;
    font-family: "Raleway";
    font-style: normal;
    font-size: 16px;
    font-weight:600;
    color: white;
    transform: translateX(-30%);
    bottom: 5%;
}

.logout-button:hover {
    background-color: #f14040;
}

.help-button {
    position: absolute;
    color: rgb(161, 161, 161) !important;
    font-weight: 500;
    font-size: 14px;
    border-bottom: 1px solid rgb(161, 161, 161);
    bottom: 12%;
    margin-left: -0.2%;
}

.help-button:hover {
    color: rgb(63, 63, 63) !important;
    border-bottom: 1px solid rgb(63, 63, 63);
}


/* POPUP */
.popup {
    visibility: hidden;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(121, 121, 121, 0.322);
    z-index: 10;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.popup-form {
    width: 20%;
    height: 40%;
    margin-top: -10%;
    border-radius: 10px;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}

.popup-form h1 {
    margin-top: 10%;
}

.close-popup {
    position: absolute;
    right: 0;
    margin-top: 5%;
    margin-right: 5%;
    width: 7%;
    height: 7%;
    border: none;
    border-radius: 5px;
    outline: none;
}

.close-popup:hover {
    background-color: rgb(197, 197, 197);
}

.make-visible {
    visibility: visible;
    animation-name: slowAppear;
    animation-duration: 0.4s;
}

.make-invisible {
    visibility: hidden;
    animation-name: slowAppear;
    animation-duration: 0.4s;
}

@keyframes flyFromRight {
    from {
        opacity: 0%;
        transform: translateX(10%);
    }
    to {
        opacity: 100%;
        transform: translateX(0%);
    }
}

@keyframes flyFromDown {
    from {
        opacity: 0%;
        transform: translateY(3%);
    }
    to {
        opacity: 100%;
        transform: translateY(0%);
    }
}

@keyframes flyFromUp {
    from {
        opacity: 0%;
        transform: translateY(-3%);
    }
    to {
        opacity: 100%;
        transform: translateY(0%);
    }
}

@keyframes slowAppear{
    from{
        opacity: 0%;
    }
    to {
        opacity: 100%;
    }
}

